# Torch-Board

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  testing_helper.py
.github/workflows/: python-app.yml
docs/api/: api_calls.MD
examples/: CNN.py  classifier.py  regressor.py
tests/: test_examples.py
torch-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
torch-frontend/src/: App.svelte  app.css
torch-frontend/src/chartConfig/: chartConfig.ts  chartLogic.ts  chartStore.ts  fetchLogic.ts
torch-frontend/src/common/: ServerCommunication.ts  StoreValue.ts
torch-frontend/src/components/: AdvancedBarChart.svelte  ChartComponent.svelte  ColorButton.svelte  Counter.svelte  NeuralNetwork.svelte  OptimizerVariablesEditor.svelte  SimpleBarChart.svelte  SimpleLineChart.svelte  TextButton.svelte
torch-frontend/src/components/charts/: AdvancedLineChart.svelte  ChartComponent.svelte  MultiChartList.svelte
torchboard/: __init__.py
torchboard/base/: __init__.py  board.py  listener.py  results.py  utils.py
torchboard/operations/: model.py  optim.py
torchboard/server/: server.py  torchboard_server.py  utils.py
