[tool.poetry]
name = "torchboard"
version = "0.1.1"
description = "Python dashboard application adding interactivity into your pytorch model"
readme = "README.md"
repository = "https://github.com/Dawid64/Torch-Board"
authors = ["Dawid Siera <dawid.siera@gmail.com>", "Julian Mikołajczak <mikolajczak.julian@gmail.com>", "Anatol Kaczmarek <anatol.kaczmarek@gmail.com>", "Jakub Jagła <jakub.jagla01@gmail.com>"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
